--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-live-clock": "^5.7.0",
-    "react-moment": "^1.1.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
