--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "typescript": "4.6.2"
   }
